fix: fixed Recupera password link not visible

--- a/src/app/pages/public/login/login.page.scss
+++ b/src/app/pages/public/login/login.page.scss
@@ -7,10 +7,5 @@ ion-grid {
     ion-button {
       width: 100%;
     }
-    ion-text {
-      a {
-        color: white;
-      }
-    }
   }
 }
