--- a/src/app/pages/public/recupera-password/recupera-password.page.scss
+++ b/src/app/pages/public/recupera-password/recupera-password.page.scss
@@ -1,9 +1,9 @@
 ion-item {
-  width: 60%;
+  width: 80%;
 }
 
 .button-row {
-  width: 60%;
+  width: 80%;
   display: flex;
   justify-content: flex-end;
   margin-top: 2%;
